--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
         <a href="index.html" id="logo">
-            <img src="i/theme/logo-1-1.png" class="main-logo" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
+            <img src="i/theme/logo-1-1.png" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
             <p>Rosec</p>
-            <p class="logo-slogan">Security Solutions</p>
+            <p>Security Solutions</p>
         </a>
         <ul class="navbar-nav">
             <li class="nav-item active">
