--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
         <a href="index.html" id="logo">
             <img src="i/theme/logo-1-1.png" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
-            <p>Rosec</p>
-            <p>Security Solutions</p>
+            <p>Company</p>
+            <p>Company Slogan</p>
         </a>
         <ul class="navbar-nav">
             <li class="nav-item active">
