update for package-json.lock vulnaribalities

--- a/public/about.html
+++ b/public/about.html
@@ -14,14 +14,9 @@
     <!--Header-->
     <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
-        <a href="index.html" id="logo">
-            <img src="i/theme/logo-1-1.png" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
-            <p>Company</p>
-            <p>Company Slogan</p>
-        </a>
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link mailto" href="mailto:info@rosec.co.za">info@rosec.co.za <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -42,6 +37,43 @@
             </li>
         </ul>
     </nav>
+        <nav class="navbar navbar-expand-md justify-content-center">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="index.html" id="logo">
+                        <img src="i/theme/logo-desktop.png" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
+                        <p>Company</p>
+                        <p>Company Slogan</p>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </nav>
+<!--        -->
+<!--    <nav aria-label="breadcrumb" >-->
+<!--        <ol class="breadcrumb justify-content-center">-->
+<!--            <li class="breadcrumb-item active " aria-current="page">Home</li>-->
+<!--        </ol>-->
+<!--    </nav>-->
     </header>
 
 
